--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +11,7 @@
 
 @layer base {
   body {
-    @apply font-inter;
+    @apply font-montserrat;
   }
 }
 
@@ -116,7 +116,7 @@
   }
 
   .nav-logo {
-    @apply font-spaceGrotesk text-[21px] text-secondary font-bold;
+    @apply text-[21px] text-secondary font-bold;
   }
 
   /* PRICE INFO */
