--- a/app/globals.css
+++ b/app/globals.css
@@ -150,3 +150,7 @@
     @apply bg-gray-900 border border-gray-900 rounded-lg shadow-xs px-5 py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
   }
 }
+
+.no-outline {
+  outline: none;
+}
